RESOLVED FIXED33856
Some composited reflections incorrectly positioned
https://bugs.webkit.org/show_bug.cgi?id=33856
Summary Some composited reflections incorrectly positioned
Simon Fraser (smfr)
Reported 2010-01-19 12:22:14 PST
When compositing layers are larger than their associated RenderLayers, for example because of shadows or outline, then reflections can be misplaced.
Attachments
Patch (49.97 KB, patch)
2010-01-19 12:25 PST, Simon Fraser (smfr)
mitz: review+
Simon Fraser (smfr)
Comment 1 2010-01-19 12:25:27 PST
Simon Fraser (smfr)
Comment 2 2010-01-19 14:19:08 PST
Note You need to log in before you can comment on or make changes to this bug.